# dv-custom-car-manager

./: .editorconfig  .gitignore  CHANGELOG.txt  Cargo.toml  README.md  build.gradle  build.rs  settings.gradle
.github/workflows/: build.yml  gradle.yml
src/: cmd.rs  home.rs  main.rs
src/controller/: ccl.rs  dv.rs  mod.rs  run_after.rs  zsounds.rs
src/data/: ccl.rs  ccl_car.rs  config.rs  dv.rs  mod.rs  nav.rs
src/main/java/: module-info.java
src/main/java/net/insprill/customcarmanager/: CustomCarManager.java
src/main/java/net/insprill/customcarmanager/cars/: Car.java  CarManager.java
src/main/java/net/insprill/customcarmanager/config/: Config.java  Locale.java
src/main/java/net/insprill/customcarmanager/locale/: Locale.java
src/main/java/net/insprill/customcarmanager/ui/: CarElement.java  UIController.java  Window.java
src/main/java/net/insprill/customcarmanager/ui/dialog/: ConfirmationDialog.java  ErrorDialog.java  InfoDialog.java
src/main/java/net/insprill/customcarmanager/ui/elements/: CarElement.java
src/main/java/net/insprill/customcarmanager/ui/factory/: FXMLFactory.java  FileChooserFactory.java  FolderChooserFactory.java
src/main/java/net/insprill/customcarmanager/util/: IO.java  Processes.java  TextHelper.java
src/main/resources/: config.json  config.properties
src/main/resources/locale/: en-us.properties
src/main/resources/ui/: car.fxml  car_element.fxml  home.fxml
src/mods/: ccl.rs  mod.rs  skinmanager.rs  zsounds.rs
src/test/java/net/insprill/customcarmanager/util/: IOTest.java  TextHelperTest.java
src/ui/: alert.rs  ccl.rs  gutter.rs  home.fl  mod.rs  settings.rs  skinmanager.rs  theme.rs  window.rs  window_controller.rs  zsounds.rs
src/ui/widget/: dropdown.rs  mod.rs  mod_header.rs  overlay.rs  painter.rs  svg.rs
src/util/: file_chooser.rs  utils.rs
