[package]
name = "custom-car-manager"
version = "2.0.0-SNAPSHOT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
fs_extra = "1.2.0"
infer = "0.9.0"
log = "0.4.17"
platform-dirs = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
simplelog = "0.12.0"
sysinfo = "0.26.4"
trash = "2.1.5"
zip = "0.6.2"

[profile.release]
strip = true
lto = true
