[package]
name = "dv-content-manager"
version = "2.0.0-SNAPSHOT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["svg"] }
fs_extra = "1.2.0"
infer = "0.9.0"
log = "0.4.17"
platform-dirs = "0.3.0"
rand = "0.8.5"
rodio = { version = "0.16.0", default-features = false, features = ["vorbis"] }
serde = { version = "1.0.145", features = ["derive"] }
# serde_json = "1.0.85"
serde_json_lenient = { git = "https://github.com/google/serde_json_lenient", branch = "upgrade-serde-json" }
simplelog = "0.12.0"
sysinfo = "0.26.4"
trash = "2.1.5"
zip = "0.6.2"

[profile.release]
strip = true
lto = true
